# transaction_system

./: .coverage  .env  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  sample_transactions.csv
env/: local.env  testing.env
reports/: urls.py  utils.py  views.py
tests/: conftest.py  tests_customer_summary_report_view.py  tests_product_summary_report_view.py  tests_transaction_detail_view.py  tests_transactions_list_view.py  tests_transactions_upload_view.py
transaction_system/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
transactions/: admin.py  models.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_customer_address_customer_is_active_and_more.py  0003_alter_transaction_transaction_id.py  0004_remove_transaction_transaction_custome_a08692_idx_and_more.py  0005_delete_customer_delete_product.py
